- New Target 'Process sdef' to generate script suite files from sdef files using sdp - Target 'SubEthaEdit' depends on 'Process sdef' - Added initial scripting definition to the project, based on the 1.1.5 definition - Extended definiton with text suite support

--- a/.gitattributes
+++ b/.gitattributes
@@ -220,6 +220,7 @@ subethaedit/SelectionOperation.h -text
 subethaedit/SelectionOperation.m -text
 subethaedit/SessionProfile.h -text
 subethaedit/SessionProfile.m -text
+subethaedit/SubEthaEdit.sdef -text
 subethaedit/SubEthaEdit.xcode/dwagner.pbxuser -text
 subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text svneol=unset#application/octet-stream
 subethaedit/SubEthaEdit.xcode/project.pbxproj -text
