- Tweaked scripting definition to include standard property for document class - Added 'mode' document and an icon file for it - Added Base.mode

--- a/.gitattributes
+++ b/.gitattributes
@@ -201,6 +201,9 @@ subethaedit/HandshakeProfile.m -text
 subethaedit/Info.plist -text
 subethaedit/InternetController.h -text
 subethaedit/InternetController.m -text
+subethaedit/Mode.icns -text
+subethaedit/Modes/Base.mode/Contents/Info.plist -text
+subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
