--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -11,8 +11,6 @@
 			<array>
 				<string>*</string>
 			</array>
-			<key>CFBundleTypeIconFile</key>
-			<string></string>
 			<key>CFBundleTypeMIMETypes</key>
 			<array>
 				<string>text/plain</string>
@@ -27,6 +25,20 @@
 			<string>Editor</string>
 			<key>NSDocumentClass</key>
 			<string>PlainTextDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>mode</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>Mode</string>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEdit Mode</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<true/>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
@@ -43,9 +55,9 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>0.1</string>
-        <key>LSMinimumSystemVersion</key>
+	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
-        <key>NSAppleScriptEnabled</key>
+	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
