- AppleScript Studio support by adding AppleScriptKit and inheriting AppleScript objects from ASK base classes - Added scriptSuite files because due to the dependency to ASK we can no longer generate the base script suite files from a scripting definition file. You need an sdef for the base class definitions as well which is not available for ASK. Other suites not depending on ASK may be generated via an sdef and sdp. - Operations now support NSCopying - Basic processing and distribution of operations almost completed. Transformation of operations is still missing.

--- a/.gitattributes
+++ b/.gitattributes
@@ -233,6 +233,8 @@ subethaedit/SubEthaEdit.sdef -text
 subethaedit/SubEthaEdit.xcode/dwagner.pbxuser -text
 subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text svneol=unset#application/octet-stream
 subethaedit/SubEthaEdit.xcode/project.pbxproj -text
+subethaedit/SubEthaEditSuite.scriptSuite -text
+subethaedit/SubEthaEditSuite.scriptTerminology -text
 subethaedit/SubEthaEdit_Prefix.pch -text
 subethaedit/SyntaxDefinition.h -text
 subethaedit/SyntaxDefinition.m -text
