- added TextStorage - implemented workflow of TextOperations in the Document -- Document --This line, and those below, will be ignored--
A    subethaedit/TextStorage.h
A    subethaedit/TextStorage.m
M    subethaedit/PlainTextDocument.h
M    subethaedit/SubEthaEdit.xcode/project.pbxproj
M    subethaedit/SubEthaEdit.xcode/dwagner.pbxuser
M    subethaedit/PlainTextDocument.m

--- a/.gitattributes
+++ b/.gitattributes
@@ -489,6 +489,8 @@ subethaedit/TCMRendezvousBrowser.h -text
 subethaedit/TCMRendezvousBrowser.m -text
 subethaedit/TextOperation.h -text
 subethaedit/TextOperation.m -text
+subethaedit/TextStorage.h -text
+subethaedit/TextStorage.m -text
 subethaedit/Tools/HTMLTemplate.html -text
 subethaedit/Tools/LaTeXTemplate.latex -text
 subethaedit/Tools/RTFTemplate.rtf -text
