- bunt (StateMachine works basically, States & PlainStrings are colored) - now loads SyntaxDefinition from Bundle

--- a/.gitattributes
+++ b/.gitattributes
@@ -405,6 +405,7 @@ subethaedit/InternetController.m -text
 subethaedit/Mode.icns -text
 subethaedit/Modes/Base.mode/Contents/Info.plist -text
 subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Base.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
