- Added empty script menu - Added action to select an encoding - TextStorage initializes its encoding with system encoding

--- a/.gitattributes
+++ b/.gitattributes
@@ -510,6 +510,7 @@ subethaedit/artwork/ActionPressed.tiff -text
 subethaedit/artwork/Announce.tiff -text
 subethaedit/artwork/DefaultPerson.tiff -text
 subethaedit/artwork/Participants.icns -text
+subethaedit/artwork/ScriptMenu.tiff -text
 subethaedit/artwork/StatusLock.tiff -text
 subethaedit/artwork/StatusReadOnly.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
