- Added General and Edit pref panes - Removed Encoding pref pane

--- a/.gitattributes
+++ b/.gitattributes
@@ -375,14 +375,17 @@ subethaedit/DocumentMode.h -text
 subethaedit/DocumentMode.m -text
 subethaedit/DocumentModeManager.h -text
 subethaedit/DocumentModeManager.m -text
+subethaedit/EditPreferences.h -text
+subethaedit/EditPreferences.m -text
 subethaedit/EncodingManager.h -text
 subethaedit/EncodingManager.m -text
-subethaedit/EncodingPreferences.h -text
-subethaedit/EncodingPreferences.m -text
 subethaedit/English.lproj/Credits.rtf -text
-subethaedit/English.lproj/EncodingPrefs.nib/classes.nib -text
-subethaedit/English.lproj/EncodingPrefs.nib/info.nib -text
-subethaedit/English.lproj/EncodingPrefs.nib/keyedobjects.nib -text
+subethaedit/English.lproj/EditPrefs.nib/classes.nib -text
+subethaedit/English.lproj/EditPrefs.nib/info.nib -text
+subethaedit/English.lproj/EditPrefs.nib/keyedobjects.nib -text
+subethaedit/English.lproj/GeneralPrefs.nib/classes.nib -text
+subethaedit/English.lproj/GeneralPrefs.nib/info.nib -text
+subethaedit/English.lproj/GeneralPrefs.nib/keyedobjects.nib -text
 subethaedit/English.lproj/InfoPlist.strings -text
 subethaedit/English.lproj/Internet.nib/classes.nib -text
 subethaedit/English.lproj/Internet.nib/info.nib -text
@@ -402,6 +405,8 @@ subethaedit/English.lproj/SelectEncodingsPanel.nib/info.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/objects.nib -text
 subethaedit/Functions.h -text
 subethaedit/Functions.m -text
+subethaedit/GeneralPreferences.h -text
+subethaedit/GeneralPreferences.m -text
 subethaedit/HandshakeProfile.h -text
 subethaedit/HandshakeProfile.m -text
 subethaedit/Info.plist -text
@@ -509,6 +514,8 @@ subethaedit/artwork/Action.tiff -text
 subethaedit/artwork/ActionPressed.tiff -text
 subethaedit/artwork/Announce.tiff -text
 subethaedit/artwork/DefaultPerson.tiff -text
+subethaedit/artwork/EditPrefs.tiff -text
+subethaedit/artwork/GeneralPrefs.tiff -text
 subethaedit/artwork/Participants.icns -text
 subethaedit/artwork/ScriptMenu.tiff -text
 subethaedit/artwork/StatusLock.tiff -text
