--- a/.gitattributes
+++ b/.gitattributes
@@ -411,6 +411,8 @@ subethaedit/HandshakeProfile.h -text
 subethaedit/HandshakeProfile.m -text
 subethaedit/HueToColorValueTransformer.h -text
 subethaedit/HueToColorValueTransformer.m -text
+subethaedit/ImagePopUpButtonCell.h -text
+subethaedit/ImagePopUpButtonCell.m -text
 subethaedit/Info.plist -text
 subethaedit/InternetController.h -text
 subethaedit/InternetController.m -text
