- added objective-c mode - modemenu now is build like encoding menu and sorted - modemenu indicates which mode is the current one - modes can be switched now

--- a/.gitattributes
+++ b/.gitattributes
@@ -223,6 +223,9 @@ subethaedit/Mode.icns -text
 subethaedit/Modes/Base.mode/Contents/Info.plist -text
 subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Base.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Objective-C.mode/Contents/Info.plist -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
