--- a/.gitattributes
+++ b/.gitattributes
@@ -206,6 +206,8 @@ subethaedit/English.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/classes.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/info.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/objects.nib -text
+subethaedit/FontAttributesToStringValueTransformer.h -text
+subethaedit/FontAttributesToStringValueTransformer.m -text
 subethaedit/Functions.h -text
 subethaedit/Functions.m -text
 subethaedit/GeneralPreferences.h -text
