- Added SLA resource for disk image and disk image creation script - Added "Create Disk Image" target - "Converted" several NSLogs to DEBUGLOGs - Port number defaults to '6942' and can be overwritten using defaults key "port"

--- a/.gitattributes
+++ b/.gitattributes
@@ -406,6 +406,7 @@ subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
 subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
+subethaedit/SLA.r -text
 subethaedit/SaturationToColorValueTransformer.h -text
 subethaedit/SaturationToColorValueTransformer.m -text
 subethaedit/SelectionOperation.h -text
@@ -493,6 +494,7 @@ subethaedit/artwork/StatusLock.tiff -text
 subethaedit/artwork/StatusReadOnly.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
 subethaedit/artwork/URLIcon.tiff -text
+subethaedit/createDiskImage.sh -text
 subethaedit/debug.tiff -text
 subethaedit/main.m -text
 subethaedit/version.plist -text
