--- a/.gitattributes
+++ b/.gitattributes
@@ -486,6 +486,9 @@ subethaedit/Tools/HTMLTemplate.html -text
 subethaedit/Tools/LaTeXTemplate.latex -text
 subethaedit/Tools/RTFTemplate.rtf -text
 subethaedit/Tools/autodoc -text
+subethaedit/Tools/serials/attackserial.pl -text
+subethaedit/Tools/serials/checkserial.pl -text
+subethaedit/Tools/serials/makeserial.pl -text
 subethaedit/artwork/Action.tiff -text
 subethaedit/artwork/ActionPressed.tiff -text
 subethaedit/artwork/Announce.tiff -text
