- Added option to add 'Automatic' entry to mode popup - Added OpenPanelAccessory - DocumentController tracks documents originated in open panel - Replaced EncodingLogDomain with FileIOLogDomain

--- a/.gitattributes
+++ b/.gitattributes
@@ -196,6 +196,9 @@ subethaedit/English.lproj/InternetBrowser.nib/keyedobjects.nib -text
 subethaedit/English.lproj/MainMenu.nib/classes.nib -text
 subethaedit/English.lproj/MainMenu.nib/info.nib -text
 subethaedit/English.lproj/MainMenu.nib/keyedobjects.nib -text
+subethaedit/English.lproj/OpenPanelAccessory.nib/classes.nib -text
+subethaedit/English.lproj/OpenPanelAccessory.nib/info.nib -text
+subethaedit/English.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/classes.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/info.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/keyedobjects.nib -text
