--- a/.gitattributes
+++ b/.gitattributes
@@ -199,6 +199,9 @@ subethaedit/English.lproj/MainMenu.nib/keyedobjects.nib -text
 subethaedit/English.lproj/OpenPanelAccessory.nib/classes.nib -text
 subethaedit/English.lproj/OpenPanelAccessory.nib/info.nib -text
 subethaedit/English.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+subethaedit/English.lproj/PlainTextEditor.nib/classes.nib -text
+subethaedit/English.lproj/PlainTextEditor.nib/info.nib -text
+subethaedit/English.lproj/PlainTextEditor.nib/keyedobjects.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/classes.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/info.nib -text
 subethaedit/English.lproj/PlainTextWindow.nib/keyedobjects.nib -text
@@ -404,6 +407,8 @@ subethaedit/ParticipantsView.h -text
 subethaedit/ParticipantsView.m -text
 subethaedit/PlainTextDocument.h -text
 subethaedit/PlainTextDocument.m -text
+subethaedit/PlainTextEditor.h -text
+subethaedit/PlainTextEditor.m -text
 subethaedit/PlainTextWindowController.h -text
 subethaedit/PlainTextWindowController.m -text
 subethaedit/Preferences.nib/classes.nib -text
