--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -40,6 +40,20 @@
 			<key>LSTypeIsPackage</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>see</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEditType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<true/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>SubEthaEdit</string>
