- Added 'see' as cmd line tool and authorization helper (not implemented) - Fixed #SEE-25 (AppleEvent handling to support Xcode's external editor interface), SubEtha seems to need correct bundle identifier and bundle signature in order to get this working.

--- a/.gitattributes
+++ b/.gitattributes
@@ -533,4 +533,6 @@ subethaedit/artwork/URLIcon.tiff -text
 subethaedit/createDiskImage.sh -text
 subethaedit/debug.tiff -text
 subethaedit/main.m -text
+subethaedit/see/main.c -text
+subethaedit/see/see.1 -text
 subethaedit/version.plist -text
