--- a/.gitattributes
+++ b/.gitattributes
@@ -257,6 +257,13 @@ subethaedit/Modes/Base.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Info.plist -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/MoreIsBetter/MoreCFQ.c -text
+subethaedit/MoreIsBetter/MoreCFQ.h -text
+subethaedit/MoreIsBetter/MoreSecurity.c -text
+subethaedit/MoreIsBetter/MoreSecurity.h -text
+subethaedit/MoreIsBetter/MoreSetup.h -text
+subethaedit/MoreIsBetter/MoreUNIX.c -text
+subethaedit/MoreIsBetter/MoreUNIX.h -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDictionaryTCMAdditions.h -text
@@ -438,6 +445,7 @@ subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
 subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
+subethaedit/SEEHelperTemplate.c -text
 subethaedit/SLA.r -text
 subethaedit/SaturationToColorValueTransformer.h -text
 subethaedit/SaturationToColorValueTransformer.m -text
