--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -68,7 +68,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.1</string>
+	<string>BUILD_NUMBER_PLACEHOLDER</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
