--- a/.gitattributes
+++ b/.gitattributes
@@ -445,7 +445,7 @@ subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
 subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
-subethaedit/SEEHelperTemplate.c -text
+subethaedit/SEEHelperTemplate.m -text
 subethaedit/SLA.r -text
 subethaedit/SaturationToColorValueTransformer.h -text
 subethaedit/SaturationToColorValueTransformer.m -text
