--- a/.gitattributes
+++ b/.gitattributes
@@ -448,6 +448,8 @@ subethaedit/PlainTextWindowController.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
+subethaedit/RegexSymbolParser.h -text
+subethaedit/RegexSymbolParser.m -text
 subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
 subethaedit/SEEHelperTemplate.m -text
