- added old file icons - added New File and Open... menu entries to the dock menu

--- a/.gitattributes
+++ b/.gitattributes
@@ -466,6 +466,7 @@ subethaedit/SubEthaEdit.sdef -text
 subethaedit/SubEthaEdit.xcode/dwagner.pbxuser -text
 subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text svneol=unset#application/octet-stream
 subethaedit/SubEthaEdit.xcode/project.pbxproj -text
+subethaedit/SubEthaEditFiles.icns -text
 subethaedit/SubEthaEditSuite.scriptSuite -text
 subethaedit/SubEthaEditSuite.scriptTerminology -text
 subethaedit/SubEthaEdit_Prefix.pch -text
