--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -11,6 +11,8 @@
 			<array>
 				<string>*</string>
 			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>SubEthaEditFiles</string>
 			<key>CFBundleTypeMIMETypes</key>
 			<array>
 				<string>text/plain</string>
