- added Symbol Pop Up Button - waiting for real data to feed it with

--- a/.gitattributes
+++ b/.gitattributes
@@ -445,6 +445,8 @@ subethaedit/PlainTextEditor.h -text
 subethaedit/PlainTextEditor.m -text
 subethaedit/PlainTextWindowController.h -text
 subethaedit/PlainTextWindowController.m -text
+subethaedit/PopUpButton.h -text
+subethaedit/PopUpButton.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
@@ -558,6 +560,19 @@ subethaedit/artwork/SplitOpen.tiff -text
 subethaedit/artwork/StatusLock.tiff -text
 subethaedit/artwork/StatusReadOnly.tiff -text
 subethaedit/artwork/SubEthaEdit.icns -text
+subethaedit/artwork/Symbol#.tiff -text
+subethaedit/artwork/SymbolC.tiff -text
+subethaedit/artwork/SymbolE.tiff -text
+subethaedit/artwork/SymbolF().tiff -text
+subethaedit/artwork/SymbolF.tiff -text
+subethaedit/artwork/SymbolG.tiff -text
+subethaedit/artwork/SymbolK.tiff -text
+subethaedit/artwork/SymbolL.tiff -text
+subethaedit/artwork/SymbolM.tiff -text
+subethaedit/artwork/SymbolP.tiff -text
+subethaedit/artwork/SymbolS.tiff -text
+subethaedit/artwork/SymbolT.tiff -text
+subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/URLIcon.tiff -text
 subethaedit/createDiskImage.sh -text
 subethaedit/debug.tiff -text
