--- a/.gitattributes
+++ b/.gitattributes
@@ -256,12 +256,18 @@ subethaedit/Mode.icns -text
 subethaedit/Modes/Base.mode/Contents/Info.plist -text
 subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Base.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/HTML.mode/Contents/Info.plist -text
+subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Info.plist -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/XML.mode/Contents/Info.plist -text
+subethaedit/Modes/XML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/XML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/MoreIsBetter/MoreCFQ.c -text
 subethaedit/MoreIsBetter/MoreCFQ.h -text
 subethaedit/MoreIsBetter/MoreSecurity.c -text
