--- a/.gitattributes
+++ b/.gitattributes
@@ -456,6 +456,8 @@ subethaedit/PlainTextWindowController.h -text
 subethaedit/PlainTextWindowController.m -text
 subethaedit/PopUpButton.h -text
 subethaedit/PopUpButton.m -text
+subethaedit/PopUpButtonCell.h -text
+subethaedit/PopUpButtonCell.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
