- made preference toolbar not configureable - added green files icons - added types c m php to the filetypes to see how this   affects the finder display

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -10,6 +10,10 @@
 			<key>CFBundleTypeExtensions</key>
 			<array>
 				<string>*</string>
+				<string>php</string>
+				<string>m</string>
+				<string>c</string>
+				<string>h</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
 			<string>SubEthaEditFiles</string>
