--- a/.gitattributes
+++ b/.gitattributes
@@ -207,11 +207,11 @@ subethaedit/ButtonScrollView.h -text
 subethaedit/ButtonScrollView.m -text
 subethaedit/Debug/DebugController.h -text
 subethaedit/Debug/DebugController.m -text
-subethaedit/DebugPreferences.h -text
-subethaedit/DebugPreferences.m -text
-subethaedit/DebugPrefs.nib/classes.nib -text
-subethaedit/DebugPrefs.nib/info.nib -text
-subethaedit/DebugPrefs.nib/keyedobjects.nib -text
+subethaedit/Debug/DebugPreferences.h -text
+subethaedit/Debug/DebugPreferences.m -text
+subethaedit/Debug/DebugPrefs.nib/classes.nib -text
+subethaedit/Debug/DebugPrefs.nib/info.nib -text
+subethaedit/Debug/DebugPrefs.nib/keyedobjects.nib -text
 subethaedit/DocumentController.h -text
 subethaedit/DocumentController.m -text
 subethaedit/DocumentMode.h -text
@@ -504,7 +504,6 @@ subethaedit/SessionProfile.m -text
 subethaedit/SplitView.h -text
 subethaedit/SplitView.m -text
 subethaedit/SubEthaEdit.sdef -text
-subethaedit/SubEthaEdit.xcode/mbo.pbxuser -text svneol=unset#application/octet-stream
 subethaedit/SubEthaEdit.xcode/project.pbxproj -text
 subethaedit/SubEthaEditFiles.icns -text
 subethaedit/SubEthaEditSuite.scriptSuite -text
