- added pch extension to objective c mode - added all old extension to Info.plist for nice icons

--- a/subethaedit/Modes/Objective-C.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Info.plist
@@ -20,6 +20,8 @@
 	<array>
 	   <string>m</string>
 	   <string>h</string>
+	   <string>pch</string>
+	   <string>mm</string>
 	</array>
 </dict>
 </plist>
