--- a/.gitattributes
+++ b/.gitattributes
@@ -293,6 +293,7 @@ subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -
 subethaedit/Modes/Base.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/HTML.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Info.plist -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
