- added jump to next/previous symbol - added TouchingRanges() to functions - added iconfs for next/previous symbol - made some icons smaller through GraphicConverter

--- a/.gitattributes
+++ b/.gitattributes
@@ -599,7 +599,9 @@ subethaedit/artwork/DefaultPerson.tiff -text
 subethaedit/artwork/EditPrefs.tiff -text
 subethaedit/artwork/GeneralPrefs.tiff -text
 subethaedit/artwork/HideChangeMarks.psd -text
+subethaedit/artwork/NextSymbol.tiff -text
 subethaedit/artwork/Participants.icns -text
+subethaedit/artwork/PreviousSymbol.tiff -text
 subethaedit/artwork/Rendezvous.psd -text
 subethaedit/artwork/ScriptMenu.tiff -text
 subethaedit/artwork/ShiftLeft.tiff -text
