--- a/.gitattributes
+++ b/.gitattributes
@@ -496,6 +496,8 @@ subethaedit/PopUpButtonCell.m -text
 subethaedit/Preferences.nib/classes.nib -text
 subethaedit/Preferences.nib/info.nib -text
 subethaedit/Preferences.nib/keyedobjects.nib -text
+subethaedit/RadarScroller.h -text
+subethaedit/RadarScroller.m -text
 subethaedit/RegexSymbolDefinition.h -text
 subethaedit/RegexSymbolDefinition.m -text
 subethaedit/RegexSymbolParser.h -text
